--- a/1.3 Looping vs Recursion/index.html
+++ b/1.3 Looping vs Recursion/index.html
@@ -6,13 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>JavaScript NameSpaces</h1>
-
-<div id="output">
-    THIS IS THE DIV
-</div>
-
-    <script src="namespace1.js"></script>
-    <script src="namespace2.js"></script>
+    <h1>Looping vs Recursion in JavaScript</h1>
+    <script src="app.js"></script>
 </body>
 </html>
