--- a/19. Object PROPERTY DESCRIPTORS - add property to objects/index.html
+++ b/19. Object PROPERTY DESCRIPTORS - add property to objects/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>LOOPS</h1>
+    <h1>JavaScript Object - Proprty Descriptors</h1>
     <script src="app.js"></script>
 </body>
 </html>
