--- a/3.1.a.1 Practical use of prototyps with Arrays/index.html
+++ b/3.1.a.1 Practical use of prototyps with Arrays/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Truthy Vs Falsey Values - If Statement</h1>
-    <script src ="app.js"></script>
+    <h1>Practical Uses for Prototypes with Arrays</h1>
+    <script src="app.js"></script>
 </body>
 </html>
