--- a/1.2 CSS/Proj2_Carousel_Kevin_Powell/Vanilla_JS_Carousel.html
+++ b/1.2 CSS/Proj2_Carousel_Kevin_Powell/Vanilla_JS_Carousel.html
@@ -17,12 +17,22 @@
         <div class="carousel__track-container">
             <ul class="carousel__track">
                 <li class="carousel__slide current-slide">
-                    <img class="carousel-image" src="../Proj10_Shoes_Footwear_Design/revolt-164_6wVEHfI-unsplash.jpg" alt="Shoe1">
+                    <img class="carousel-image" src="../../../Proj12 _client_doux_bakery/Doux_Bakery/Pic1.png"
+                        alt="pic1">
                 </li>
-                <li class="carousel__slide"><img class="carousel-image" 
-                        src="../Proj10_Shoes_Footwear_Design/dan-carlson-HxOlRTqo_F0-unsplash.jpg" alt="shoe2"></li>
                 <li class="carousel__slide"><img class="carousel-image"
-                        src="../Proj10_Shoes_Footwear_Design/paul-gaudriault-a-QH9MAAVNI-unsplash.jpg" alt="shoe3"></li>
+                        src="../../../Proj12 _client_doux_bakery/Doux_Bakery/Pic2.png" alt="shoe2"></li>
+                <li class="carousel__slide"><img class="carousel-image"
+                        src="../../../Proj12 _client_doux_bakery/Doux_Bakery/Pic3.png" alt="shoe3"></li>
+
+                <li class="carousel__slide"><img class="carousel-image"
+                        src="../../../Proj12 _client_doux_bakery/Doux_Bakery/Pic4.png" alt="shoe3"></li>
+
+                <li class="carousel__slide"><img class="carousel-image"
+                        src="../../../Proj12 _client_doux_bakery/Doux_Bakery/Pic5.png" alt="shoe3"></li>
+
+                <li class="carousel__slide"><img class="carousel-image"
+                        src="../../../Proj12 _client_doux_bakery/Doux_Bakery/Pic7.png" alt="shoe3"></li>
 
             </ul>
         </div>
@@ -33,7 +43,8 @@
             <button class="carousel__indicator"></button>
         </div>
     </div>
-    <script src="app.js"></script>
+    <!-- <script src="app.js"></script> -->
+    <script src="app1.js" defer></script>
 </body>
 
 </html>
